fix topbar size on mobile

--- a/tosatur/css/style.css
+++ b/tosatur/css/style.css
@@ -180,5 +180,6 @@ figure {
     #content-container, #topbar {
         padding-left: 10%;
         padding-right: 10%;
+        font-size: large;
     }
 }
